Clean up instance/host tables

--- a/src/routes/hosts/HostList.less
+++ b/src/routes/hosts/HostList.less
@@ -1,1 +1,10 @@
-.ant-table td { white-space: nowrap; }
+.status-good { background-color: #ccffcc; }
+.status-bad  { background-color: #ffcccc; }
+
+thead[class*="ant-table-thead"] th{
+  background-color: #2095c8 !important;
+}
+
+table[class*="ant-table"] {
+  white-space: nowrap;
+}
