--- a/src/routes/instances/InstanceLister.less
+++ b/src/routes/instances/InstanceLister.less
@@ -1,10 +1,12 @@
 .state { color: #27ae60; }
 .ant-table-small td { white-space: nowrap; text-overflow: ellipsis; }
 
-.status-pending  { background-color: #ffffcc; }
-.status-running  { background-color: #ccffcc; }
-.status-stopping { background-color: #ffffcc; }
-.status-stopped  { background-color: #ffcccc; }
+.status-pending     { background-color: #ffffcc; }
+.status-running     { background-color: #ccffcc; }
+.status-stopping    { background-color: #ffffcc; }
+.status-stopped     { background-color: #ffcccc; }
+.status-terminating { background-color: #ffcccc; }
+.status-terminated  { background-color: #ffcccc; }
 
 thead[class*="ant-table-thead"] th{
   background-color: #2095c8 !important;
