add migrating style

--- a/src/routes/instances/InstanceLister.less
+++ b/src/routes/instances/InstanceLister.less
@@ -7,6 +7,7 @@
 .status-stopped     { background-color: #ffcccc; }
 .status-terminating { background-color: #ffcccc; }
 .status-terminated  { background-color: #ffcccc; }
+.status-migrating   { background-color: #ccccff; }
 
 thead[class*="ant-table-thead"] th{
   background-color: #2095c8 !important;
