--- a/src/assets/styles/antd-customize/generic.less
+++ b/src/assets/styles/antd-customize/generic.less
@@ -22,7 +22,7 @@
 
     &.ant-table-small {
       .ant-table-thead > tr > th {
-        background: #f7f7f7;
+        background: #108eb9;
       }
 
       .ant-table-body > table {
